syntax = "proto3";
package paw.oracle.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/paw-chain/paw/x/oracle/types";

// Params defines the parameters for the oracle module.
message Params {
  option (amino.name) = "paw/x/oracle/Params";
  option (gogoproto.equal) = true;

  // vote_period is the number of blocks during which voting takes place
  uint64 vote_period = 1;

  // vote_threshold is the minimum percentage of votes required (as a decimal string)
  string vote_threshold = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // slash_fraction is the fraction slashed for missing votes
  string slash_fraction = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // slash_window is the window of blocks for tracking miss votes
  uint64 slash_window = 4;

  // min_valid_per_window is minimum number of valid votes per window
  uint64 min_valid_per_window = 5;

  // twap_lookback_window is the number of blocks to look back for TWAP calculation
  uint64 twap_lookback_window = 6;
}

// Price represents the aggregated price for an asset
message Price {
  option (gogoproto.equal) = true;

  // asset is the identifier of the asset (e.g., "BTC", "ETH")
  string asset = 1;

  // price is the aggregated price value
  string price = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // block_height is the block when this price was set
  int64 block_height = 3;

  // block_time is the timestamp when this price was set
  int64 block_time = 4;

  // num_validators is the number of validators who voted
  uint32 num_validators = 5;
}

// ValidatorPrice represents a price submission by a validator
message ValidatorPrice {
  option (gogoproto.equal) = true;

  // validator_addr is the address of the validator
  string validator_addr = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // asset is the asset identifier
  string asset = 2;

  // price is the submitted price
  string price = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // block_height is when the price was submitted
  int64 block_height = 4;

  // voting_power is the validator's voting power at submission time
  int64 voting_power = 5;
}

// ValidatorOracle represents oracle information for a validator
message ValidatorOracle {
  option (gogoproto.equal) = true;

  // validator_addr is the address of the validator
  string validator_addr = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // miss_counter tracks consecutive missed votes
  uint64 miss_counter = 2;

  // total_submissions is the total number of price submissions
  uint64 total_submissions = 3;

  // is_active indicates if the validator is actively participating
  bool is_active = 4;
}

// PriceSnapshot represents a historical price snapshot for TWAP
message PriceSnapshot {
  option (gogoproto.equal) = true;

  // asset is the asset identifier
  string asset = 1;

  // price is the price at this snapshot
  string price = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // block_height is when this snapshot was taken
  int64 block_height = 3;

  // block_time is the timestamp of this snapshot
  int64 block_time = 4;
}

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  // params defines all the parameters of the module
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // prices defines all the current prices
  repeated Price prices = 2 [(gogoproto.nullable) = false];

  // validator_prices defines all validator price submissions
  repeated ValidatorPrice validator_prices = 3 [(gogoproto.nullable) = false];

  // validator_oracles defines all validator oracle info
  repeated ValidatorOracle validator_oracles = 4 [(gogoproto.nullable) = false];

  // price_snapshots defines historical price snapshots
  repeated PriceSnapshot price_snapshots = 5 [(gogoproto.nullable) = false];
}
